; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_cirrus.c_init_input_coef.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/hda/extr_patch_cirrus.c_init_input_coef.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hda_codec = type { %struct.cs_spec* }
%struct.cs_spec = type { i64 }

@CS420X_VENDOR_NID = common dso_local global i64 0, align 8
@IDX_BEEP_CFG = common dso_local global i32 0, align 4
@CS_DMIC2_PIN_NID = common dso_local global i32 0, align 4
@CS_DMIC1_PIN_NID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hda_codec*)* @init_input_coef to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_input_coef(%struct.hda_codec* %0) #0 {
  %2 = alloca %struct.hda_codec*, align 8
  %3 = alloca %struct.cs_spec*, align 8
  %4 = alloca i32, align 4
  store %struct.hda_codec* %0, %struct.hda_codec** %2, align 8
  %5 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %6 = getelementptr inbounds %struct.hda_codec, %struct.hda_codec* %5, i32 0, i32 0
  %7 = load %struct.cs_spec*, %struct.cs_spec** %6, align 8
  store %struct.cs_spec* %7, %struct.cs_spec** %3, align 8
  %8 = load %struct.cs_spec*, %struct.cs_spec** %3, align 8
  %9 = getelementptr inbounds %struct.cs_spec, %struct.cs_spec* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @CS420X_VENDOR_NID, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %37

13:                                               ; preds = %1
  %14 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %15 = load i32, i32* @IDX_BEEP_CFG, align 4
  %16 = call i32 @cs_vendor_coef_get(%struct.hda_codec* %14, i32 %15)
  store i32 %16, i32* %4, align 4
  %17 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %18 = load i32, i32* @CS_DMIC2_PIN_NID, align 4
  %19 = call i64 @is_active_pin(%struct.hda_codec* %17, i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %13
  %22 = load i32, i32* %4, align 4
  %23 = or i32 %22, 16
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %13
  %25 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %26 = load i32, i32* @CS_DMIC1_PIN_NID, align 4
  %27 = call i64 @is_active_pin(%struct.hda_codec* %25, i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load i32, i32* %4, align 4
  %31 = or i32 %30, 8
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %29, %24
  %33 = load %struct.hda_codec*, %struct.hda_codec** %2, align 8
  %34 = load i32, i32* @IDX_BEEP_CFG, align 4
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @cs_vendor_coef_set(%struct.hda_codec* %33, i32 %34, i32 %35)
  br label %37

37:                                               ; preds = %32, %1
  ret void
}

declare dso_local i32 @cs_vendor_coef_get(%struct.hda_codec*, i32) #1

declare dso_local i64 @is_active_pin(%struct.hda_codec*, i32) #1

declare dso_local i32 @cs_vendor_coef_set(%struct.hda_codec*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
